<resources>
    <string name="app_name">Food4U</string>
    <string name="primera_opcion">Primera opcion</string>
    <string name="salir">Salir</string>
    <string name="fast4food">Fast4Food</string>
    <string name="regresa_al_login">Regresa al login</string>
    <string name="a_adir_lugar">Añadir lugar</string>
    <string name="como_se_llama_tu_restaurante">Como se llama tu restaurante?</string>
    <string name="nombre_del_restaurante">Nombre del restaurante</string>
    <string name="a_ade_una_descripcion_a_tu_restaunrante">Añade una descripcion a tu restaunrante</string>
    <string name="descripcion">Descripcion</string>
    <string name="a_ade_una_imagen_de_tu_restaurante">Añade una imagen de tu restaurante.</string>
    <string name="seleccionar_imagen">Seleccionar Imagen</string>
    <string name="guardar_restaurante">Guardar restaurante</string>
    <string name="nuevo_item">Nuevo Item</string>
    <string name="restaurantepreview">RestaurantePreview</string>
    <string name="opcionrestauranteagregado">OpcionRestauranteAgregado</string>
    <string name="anadirrestaurante">Añadir Comentario</string>
    <string name="comentarioplace">Comentarios del lugar</string>
    <string name="descplace">Descripción del lugar</string>
    <string name="calificacion">Calificacion:</string>
    <string name="guardar_valoraci_n">Guardar Valoración</string>
    <string name="refrescar">Refrescar</string>
    <string name="a_adir_comentario">Añadir comentario</string>
    <string name="configurar">Configurar</string>
    <string name="favoritos">Favoritos</string>
    <string name="eliminar_lugar">Eliminar Lugar</string>
    <string name="food4u">Food4U</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="registrarse">Registrarse</string>
    <string name="email">Email</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="nombre">Nombre</string>
</resources>