<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_degradado">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#3C4B4E"
        android:titleTextColor="@android:color/white"
        android:elevation="4dp">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="30dp"
            android:layout_height="wrap_content"
            android:contentDescription="@string/regresa_al_login"
            android:src="@drawable/ic_arrow_back_white"/>

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/fast4food"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:layout_marginStart="0dp"
            android:textStyle="bold|italic"/>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        android:fillViewport="true"
        android:padding="20dp"
        tools:ignore="ScrollViewCount">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/como_se_llama_tu_restaurante"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"/>
            <EditText
                android:id="@+id/editTextName"
                android:layout_width="350dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:autofillHints="no"
                android:inputType="text"
                android:hint="@string/nombre_del_restaurante"
                android:textColor="@color/white"
                android:padding="12dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corner"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/a_ade_una_descripcion_a_tu_restaunrante"
                android:textSize="20sp"
                android:textColor="@color/white"/>
            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="350dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:hint="@string/descripcion"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textColor="@color/white"
                android:padding="12dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corner"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:text="@string/a_ade_una_imagen_de_tu_restaurante"
                android:textSize="20sp"
                android:textColor="@color/white"/>
            <Button
                android:id="@+id/button_select_image"
                android:layout_width="320dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:backgroundTint="#3C4B4E"
                android:layout_marginTop="15dp"
                android:textColor="@color/white"
                android:text="@string/seleccionar_imagen" />
            <ImageView
                android:id="@+id/imagePreview"
                android:layout_width="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:contentDescription="@string/restaurantepreview" />

            <Button
                android:id="@+id/buttonSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="#3C4B4E"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:text="@string/guardar_restaurante" />

        </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
